# Vanguard-RE

./: .gitignore  Cargo.toml  README.md
examples/: headless.rs
src/: lib.rs  main.rs  util.rs
src/cli/: mod.rs  report.rs
src/containment/: mod.rs
src/crypto/: mod.rs  xor.rs
src/disasm/: analysis.rs  cluster.rs  mod.rs
src/heuristics/: capabilities.rs  mod.rs
src/investigate/: mod.rs
src/iocs/: mod.rs
src/secrets/: mod.rs
src/signatures/: mod.rs  yara_rules.rs
src/toolchain/: mod.rs
src/triage/: entropy.rs  formats.rs  mod.rs  report.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: corpus_stress.rs  smoke_friday.rs
